Update files, images

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - MBO HUB Amsterdam</title>
-    <link rel="stylesheet" href="../css/contact.css">
-    <link rel="stylesheet" href="../css/animations.css">
+    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="../js/navigation.js" defer></script>
-    <script src="../js/animations.js" defer></script>
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <script src="/js/navigation.js" defer></script>
+    <script src="/js/animations.js" defer></script>
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <a href="/" class="logo">
-                <img src="../assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
+                <img src="/assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
             </a>
             <nav class="main-nav">
                 <button class="burger-menu" aria-label="Toggle menu">
@@ -44,30 +44,10 @@
 
         <section class="contact-content">
             <div class="contact-page-container">
-                <div class="contact-page-form fade-in-left">
-                    <h2>Stuur ons een bericht</h2>
-                    <p>Vul het formulier in en we nemen zo snel mogelijk contact met je op.</p>
-                    <form>
-                        <div class="contact-form-group">
-                            <input type="text" class="contact-input" placeholder="Naam" required>
-                        </div>
-                        <div class="contact-form-group">
-                            <input type="email" class="contact-input" placeholder="Email" required>
-                        </div>
-                        <div class="contact-form-group">
-                            <input type="text" class="contact-input" placeholder="Onderwerp" required>
-                        </div>
-                        <div class="contact-form-group">
-                            <textarea class="contact-input" placeholder="Je bericht" required></textarea>
-                        </div>
-                        <button type="submit" class="contact-submit-button">Verstuur bericht</button>
-                    </form>
-                </div>
-
                 <div class="contact-page-sidebar">
                     <div class="contact-page-card fade-in-right">
                         <h2>Contactgegevens</h2>
-                        <p>Je kunt ons ook direct bereiken via:</p>
+                        <p>Je kunt ons bereiken via:</p>
                         <div class="contact-page-details">
                             <a href="mailto:info@mbo-hub.nl" class="contact-page-item">
                                 <i class="fa-regular fa-envelope"></i>
@@ -103,7 +83,7 @@
                     <div class="contact-page-card project-card fade-in-right" style="animation-delay: 0.4s;">
                         <h2>Project aandragen?</h2>
                         <p>Heb je een interessant project voor onze studenten?</p>
-                        <a href="/projecten/aandragen" class="contact-project-button">Draag een project aan</a>
+                        <a href="mailto:info@mbo-hub.amsterdam" class="contact-project-button">Draag een project aan</a>
                     </div>
                 </div>
             </div>
