--- a/over-ons/index.html
+++ b/over-ons/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Over Ons - MBO HUB Amsterdam</title>
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/animations.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="../js/navigation.js" defer></script>
-    <script src="../js/animations.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
+    <script src="/js/animations.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <a href="/" class="logo">
-                <img src="../assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
+                <img src="/assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
             </a>
             <nav class="main-nav">
                 <button class="burger-menu" aria-label="Toggle menu">
@@ -57,7 +57,7 @@
                 <div class="team-grid">
                     <div class="team-card fade-in">
                         <div class="team-image">
-                            <img src="../assets/SarahdeVries.webp" alt="Sarah de Vries">
+                            <img src="/assets/profile-pictures/SarahdeVries.webp" alt="Sarah de Vries">
                         </div>
                         <h3>Sarah de Vries</h3>
                         <p>Projectleider</p>
@@ -65,15 +65,26 @@
 
                     <div class="team-card fade-in" style="animation-delay: 0.2s;">
                         <div class="team-image">
-                            <img src="../assets/MarkJansen.webp" alt="Mark Jansen">
+                            <img src="/assets/profile-pictures/MarkJansen.webp" alt="Mark Jansen">
                         </div>
                         <h3>Mark Jansen</h3>
                         <p>Coördinator Bedrijfsrelaties</p>
                     </div>
 
+                    <div class="team-card fade-in" style="animation-delay: 0.2s;">
+                        <div class="team-image">
+                            <img src="/assets/profile-pictures/NicoletteAschermann.webp" alt="Mark Jansen">
+                        </div>
+                        <h3>Nicolette Aschermann</h3>
+                        <p>Projectleider</p>
+                    </div>
+                </div>
+
+                <h2 class="section-title section-title-2 fade-in">Website ontwikkelaars</h2>
+                <div class="team-grid">
                     <div class="team-card fade-in" style="animation-delay: 0.4s;">
                         <div class="team-image">
-                            <img src="../assets/MohamedAlsayed.webp" alt="Mohamed Alsayed">
+                            <img src="/assets/profile-pictures/MohamedAlsayed.webp" alt="Mohamed Alsayed">
                         </div>
                         <h3>Mohamed Alsayed</h3>
                         <p>Front-end Developer</p>
@@ -81,7 +92,7 @@
 
                     <div class="team-card fade-in" style="animation-delay: 0.4s;">
                         <div class="team-image">
-                            <img src="../assets/CarmenFaas.webp" alt="Carmen Faas">
+                            <img src="/assets/profile-pictures/CarmenFaas.webp" alt="Carmen Faas">
                         </div>
                         <h3>Carmen Faas</h3>
                         <p>Front-end Developer</p>
@@ -89,7 +100,7 @@
 
                     <div class="team-card fade-in" style="animation-delay: 0.4s;">
                         <div class="team-image">
-                            <img src="../assets/VladVerheij.webp" alt="Vlad Verheij">
+                            <img src="/assets/profile-pictures/VladVerheij.webp" alt="Vlad Verheij">
                         </div>
                         <h3>Vlad Verheij</h3>
                         <p>Front-end Developer</p>
@@ -104,29 +115,29 @@
                 <div class="partners-scroll fade-in">
                     <div class="partners-track">
                         <div class="partner-logo">
-                            <img src="../assets/ROC.webp" alt="ROC van Amsterdam">
+                            <img src="/assets/partners/ROC.webp" alt="ROC van Amsterdam">
                         </div>
                         <div class="partner-logo">
-                            <img src="../assets/Mediacollege.webp" alt="Mediacollege Amsterdam">
+                            <img src="/assets/partners/MA.webp" alt="Mediacollege Amsterdam">
                         </div>
                         <div class="partner-logo">
-                            <img src="../assets/ROC.webp" alt="ROC van Amsterdam">
+                            <img src="/assets/partners/HMC.webp" alt="HMC van Amsterdam">
                         </div>
                         <div class="partner-logo">
-                            <img src="../assets/Logo.webp" alt="MBO HUB Amsterdam">
+                            <img src="/assets/partners/MBOHUB.webp" alt="MBO HUB Amsterdam">
                         </div>
                         <!-- Duplicate for infinite scroll -->
                         <div class="partner-logo">
-                            <img src="../assets/ROC.webp" alt="ROC van Amsterdam">
+                            <img src="/assets/partners/ROC.webp" alt="ROC van Amsterdam">
                         </div>
                         <div class="partner-logo">
-                            <img src="../assets/Mediacollege.webp" alt="Mediacollege Amsterdam">
+                            <img src="/assets/partners/MA.webp" alt="Mediacollege Amsterdam">
                         </div>
                         <div class="partner-logo">
-                            <img src="../assets/ROC.webp" alt="ROC van Amsterdam">
+                            <img src="/assets/partners/HMC.webp" alt="HMC van Amsterdam">
                         </div>
                         <div class="partner-logo">
-                            <img src="../assets/Logo.webp" alt="MBO HUB Amsterdam">
+                            <img src="/assets/partners/MBOHUB.webp" alt="MBO HUB Amsterdam">
                         </div>
                     </div>
                 </div>
