--- a/projecten/index.html
+++ b/projecten/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projecten - MBO HUB Amsterdam</title>
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/projects.css">
-    <link rel="stylesheet" href="../css/animations.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/projects.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="../js/navigation.js" defer></script>
-    <script src="../js/animations.js" defer></script>
-    <script src="../js/projects.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
+    <script src="/js/animations.js" defer></script>
+    <script src="/js/projects.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <a href="/" class="logo">
-                <img src="../assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
+                <img src="/assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
             </a>
             <nav class="main-nav">
                 <button class="burger-menu" aria-label="Toggle menu">
@@ -56,7 +56,7 @@
                 <div class="projects-grid">
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Video</span>
                         </div>
                         <div class="project-content">
@@ -71,7 +71,7 @@
 
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Video</span>
                         </div>
                         <div class="project-content">
@@ -86,7 +86,7 @@
 
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Video</span>
                         </div>
                         <div class="project-content">
@@ -101,7 +101,7 @@
 
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Video</span>
                         </div>
                         <div class="project-content">
@@ -116,7 +116,7 @@
 
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Educatie</span>
                         </div>
                         <div class="project-content">
@@ -131,7 +131,7 @@
 
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Evenement</span>
                         </div>
                         <div class="project-content">
@@ -146,7 +146,7 @@
 
                     <article class="project-card fade-in">
                         <div class="project-image">
-                            <img src="../assets/ProjectBanner.jpeg" alt="Project thumbnail">
+                            <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project thumbnail">
                             <span class="project-tag">Onderwijs</span>
                         </div>
                         <div class="project-content">
