--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h2 class="section-title fade-in">Uitgelichte Projecten</h2>
                 <div class="cards-grid project-cards">
                     <div class="card fade-in-left">
-                        <img src="/assets/ProjectBanner.jpeg" alt="Project 1">
+                        <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project 1">
                         <div class="card-content">
                             <span class="filter-tag">Web Development</span>
                             <h3 class="card-title">Project 1</h3>
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="card fade-in">
-                        <img src="/assets/ProjectBanner.jpeg" alt="Project 2">
+                        <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project 2">
                         <div class="card-content">
                             <span class="filter-tag">Mobile Development</span>
                             <h3 class="card-title">Project 2</h3>
@@ -103,7 +103,7 @@
                     </div>
 
                     <div class="card fade-in-right">
-                        <img src="/assets/ProjectBanner.jpeg" alt="Project 3">
+                        <img src="/assets/projecten/PlaceholderBanner.jpg" alt="Project 3">
                         <div class="card-content">
                             <span class="filter-tag">Mobile Development</span>
                             <h3 class="card-title">Project 3</h3>
