--- a/kalender/index.html
+++ b/kalender/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evenementenkalender - MBO HUB Amsterdam</title>
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/calendar.css">
-    <link rel="stylesheet" href="../css/animations.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/calendar.css">
+    <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="../js/navigation.js" defer></script>
-    <script src="../js/animations.js" defer></script>
-    <script src="../js/calendar.js" defer></script>
+    <script src="/js/navigation.js" defer></script>
+    <script src="/js/animations.js" defer></script>
+    <script src="/js/calendar.js" defer></script>
 </head>
 <body>
     <header>
         <div class="header-container">
             <a href="/" class="logo">
-                <img src="../assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
+                <img src="/assets/Logo.webp" alt="MBO HUB Amsterdam Logo">
             </a>
             <nav class="main-nav">
                 <button class="burger-menu" aria-label="Toggle menu">
@@ -59,6 +59,14 @@
                             </div>
                             <div class="calendar-grid">
                                 <!-- Calendar will be populated by JS -->
+                            </div>
+                        </div>
+
+                        <div class="calendar-legend">
+                            <h3>Legenda</h3>
+                            <div class="legend-item">
+                                <span class="event-indicator"></span>
+                                <span>Event op deze dag</span>
                             </div>
                         </div>
 
